# mipt_2

./: .gitignore  README.md
BIG_PATTERN/: CMakeLists.txt  main.cpp
BIG_PATTERN/include/: Army.hpp  ArmyFactory.hpp  Buildings.hpp  CreateWorld.hpp  MagicMapBuilder.hpp  MagicTownFactory.hpp  Map.hpp  MapBuilder.hpp  Town.hpp  TownFactory.hpp  UsualMapBuilder.hpp  UsualTownFactory.hpp  Warriors.hpp
BIG_PATTERN/src/: Army.cpp  ArmyFactory.cpp  Buildings.cpp  CreateWorld.cpp  MagicMapBuilder.cpp  MagicTownFactory.cpp  MapBuilder.cpp  Town.cpp  TownFactory.cpp  UsualMapBuilder.cpp  UsualTownFactory.cpp  Warriors.cpp
BIG_PATTERN/tests/: MagicTownTest.cpp  UsualTownTest.cpp
